# WAF-Pipeline

./: .gitignore  README.md
backend/: app.py  model_loader.py  preprocess.py  requirements.txt  scanner.py
backend/model/: model_training.ipynb  waf_global_centroid.npy  waf_global_threshold.json  waf_group_centroids.pkl  (+3 more)
data/: raw_requests.jsonl  scored_requests.jsonl  train.txt
frontend/: .env.example  README.md  package-lock.json  package.json
model/: model_training.ipynb
scripts/: generate_traffic.py  preprocess.py
waf-transformer/: .env.example  .gitignore  Dockerfile  Makefile  PLAN.md  README.md  WAF_training.ipynb  docker-compose.yml  pyproject.toml
waf-transformer/app/: __init__.py  config.py  logging_config.py  main.py
waf-transformer/docs/: api_contract.md  architecture.md  demo_flow.md
waf-transformer/inference/: __init__.py  model_interface.py  rules.py  scanner.py
waf-transformer/ingestion/: __init__.py  batch_loader.py  file_watcher.py  stream_loader.py
waf-transformer/normalization/: __init__.py  normalizer.py  patterns.py
waf-transformer/parsing/: __init__.py  log_parser.py  request_parser.py  schemas.py
waf-transformer/retraining/: __init__.py  incremental_stub.py
waf-transformer/sample_data/: sample_requests.json
waf-transformer/scripts/: demo_scan.py  run_batch_ingest.py  run_stream_ingest.py
waf-transformer/tests/: test_log_parser.py  test_normalizer.py  test_scanner_api.py
waf-transformer/tokenization/: __init__.py  request_serializer.py  tokenizer_stub.py
waf-transformer/utils/: concurrency.py  io.py  paths.py
(+10 files in other folders)
